# depgraph

./: .env  .gitignore  DepGraph.sln  README.md  index.html  package-lock.json  package.json  vite.config.ts
Services/: Program.cs  Services.csproj
Services/Properties/: launchSettings.json
src/: App.css  App.scss  App.tsx  Backend.ts  BackendService.ts  Version.ts  classlist.ts  styles.css  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
